--- a/common/random_scheduler/Cargo.toml
+++ b/common/random_scheduler/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 
 
 [dependencies]
-interface = { git = "https://github.com/os-module/domain-lib"  }
-rref = { git = "https://github.com/os-module/domain-lib"  }
-basic = { git = "https://github.com/os-module/domain-lib"  }
-task_meta = { git = "https://github.com/os-module/domain-lib"  }
+interface = { path = "../../../domain-lib/interface"  }
+rref = { path = "../../../domain-lib/rref"  }
+basic = { path = "../../../domain-lib/basic"  }
+task_meta = { path = "../../../domain-lib/task_meta"  }
 common_scheduler = { path = "../common_scheduler" }
