--- a/drivers/virtio_mmio_common/Cargo.toml
+++ b/drivers/virtio_mmio_common/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-basic = { git = "https://github.com/os-module/domain-lib"  }
-rref = { git = "https://github.com/os-module/domain-lib"  }
+basic = { path = "../../../domain-lib/basic"  }
+rref = { path = "../../../domain-lib/rref"  }
 virtio-drivers = { git = "https://github.com/os-module/safe-virtio-drivers.git" }
 
 log = "0"
