--- a/xtask/bin-template/Cargo.toml
+++ b/xtask/bin-template/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 [dependencies]
 malloc = { git = "https://github.com/os-module/domain-lib"  }
 corelib = { git = "https://github.com/os-module/domain-lib"  }
-basic = { git = "https://github.com/os-module/domain-lib"  }
-rref = { git = "https://github.com/os-module/domain-lib"  }
-interface = { git = "https://github.com/os-module/domain-lib", features = ["domain"] }
+basic = { path = "../../../domain-lib/basic"  }
+rref = { path = "../../../domain-lib/rref"  }
+interface = { path = "../../../domain-lib/interface", features = ["domain"] }
 
 DOMAIN_NAME = { path = "../../TY/DOMAIN_NAME" }
