feat: add more syscall
add `sys_framebuffer` syscall.
add `sys_event_get` syscall.
add some fs syscalls.

--- a/domain-list.toml
+++ b/domain-list.toml
@@ -45,6 +45,7 @@ init_members = [
     "uart16550",
     "virtio_mmio_block",
     "virtio_mmio_net",
+    "virtio_mmio_input",
     "devfs",
     "fatfs",
     "pipefs",
