--- a/common/fifo_scheduler/Cargo.toml
+++ b/common/fifo_scheduler/Cargo.toml
@@ -11,5 +11,5 @@ interface = { path = "../../../domain-lib/interface"  }
 rref = { path = "../../../domain-lib/rref"  }
 task_meta = { path = "../../../domain-lib/task_meta"  }
 common_scheduler = { path = "../common_scheduler" }
-
+storage = { path = "../../../domain-lib/storage", features = ["impl"] }
 log = "0"
