--- a/common/random_scheduler/Cargo.toml
+++ b/common/random_scheduler/Cargo.toml
@@ -10,3 +10,4 @@ rref = { path = "../../../domain-lib/rref"  }
 basic = { path = "../../../domain-lib/basic"  }
 task_meta = { path = "../../../domain-lib/task_meta"  }
 common_scheduler = { path = "../common_scheduler" }
+storage = { path = "../../../domain-lib/storage", features = ["impl"] }
