--- a/fs/pipefs/Cargo.toml
+++ b/fs/pipefs/Cargo.toml
@@ -9,7 +9,7 @@ interface = { path = "../../../domain-lib/interface"  }
 rref = { path = "../../../domain-lib/rref"  }
 basic = { path = "../../../domain-lib/basic"  }
 
-vfscore = { git = "https://github.com/os-module/rvfs.git", features = ["linux_error"] }
-dynfs = { git = "https://github.com/os-module/rvfs.git" }
+vfscore = { path = "../../../rvfs-ref/vfscore-ref", package = "vfscore-ref" , features = ["linux_error"] }
+dynfs = { path = "../../../rvfs-ref/dynfs-ref", package = "dynfs-ref" }
 generic = { path = "../generic" }
 log = "0"
