--- a/common/task/Cargo.toml
+++ b/common/task/Cargo.toml
@@ -12,11 +12,15 @@ rref = { path = "../../../domain-lib/rref"  }
 task_meta = { path = "../../../domain-lib/task_meta"  }
 
 small-index = { git = "https://github.com/os-module/small-index" }
-vfscore = { git = "https://github.com/os-module/rvfs.git", features = ["linux_error"] }
+vfscore = { path = "../../../rvfs-ref/vfscore-ref", package = "vfscore-ref", features = ["linux_error"] }
 page_table = { git = "https://github.com/os-module/page-table.git", package = "page-table" }
 memory_addr = { git ="https://github.com/os-module/memory_addr" }
-ptable = { git = "https://github.com/os-module/vmspace", package = "vmspace" }
+
 pod = { git = "https://github.com/asterinas/pod", rev = "d7dba56" }
+
+#ptable = { git = "https://github.com/os-module/vmspace", package = "vmspace" }
+ptable = { path = "../../../../os-modules/vmspace", package = "vmspace" }
+
 
 spin = "0"
 log = "0"
