--- a/fs/devfs/Cargo.toml
+++ b/fs/devfs/Cargo.toml
@@ -10,8 +10,8 @@ interface = { path = "../../../domain-lib/interface"  }
 basic = { path = "../../../domain-lib/basic"  }
 rref = { path = "../../../domain-lib/rref"  }
 
-devfs = { git = "https://github.com/os-module/rvfs.git" }
-vfscore = { git = "https://github.com/os-module/rvfs.git", features = ["linux_error"] }
+devfs = { path = "../../../rvfs-ref/devfs-ref", package = "devfs-ref" }
+vfscore = { path = "../../../rvfs-ref/vfscore-ref", package = "vfscore-ref", features = ["linux_error"] }
 generic = { path = "../generic" }
 pod = { git = "https://github.com/asterinas/pod", rev = "d7dba56" }
 log = "0"
