--- a/fs/domainfs/Cargo.toml
+++ b/fs/domainfs/Cargo.toml
@@ -10,5 +10,5 @@ rref = { path = "../../../domain-lib/rref"  }
 basic = { path = "../../../domain-lib/basic" }
 
 generic = { path = "../generic" }
-vfscore = { git = "https://github.com/os-module/rvfs.git", features = ["linux_error"] }
-custom_fs = { git = "https://github.com/os-module/rvfs.git" }
+vfscore = { path = "../../../rvfs-ref/vfscore-ref", package = "vfscore-ref", features = ["linux_error"] }
+custom_fs = { path = "../../../rvfs-ref/customfs-ref", package = "custom_fs-ref" }
