--- a/common/vfs2/gvfs2/Cargo.toml
+++ b/common/vfs2/gvfs2/Cargo.toml
@@ -14,8 +14,7 @@ malloc = { path = "../../../../domain-lib/malloc" }
 storage = { path = "../../../../domain-lib/storage", features = ["impl"] }
 vfs2 = { path = "../vfs2" }
 
-unwind = { path = "../../../../base/unwind", optional = true }
 
 [features]
 default = ["rust-unwind"]
-rust-unwind = ["dep:unwind"]
+rust-unwind = []
