--- a/drivers/buf_input/gbuf_input/Cargo.toml
+++ b/drivers/buf_input/gbuf_input/Cargo.toml
@@ -15,8 +15,7 @@ interface = { path = "../../../../domain-lib/interface",  features = ["domain"] 
 buf_input = { path = "../buf_input" }
 storage = { path = "../../../../domain-lib/storage", features = ["impl"] }
 
-unwind = { path = "../../../../base/unwind", optional = true }
 
 [features]
 default = ["rust-unwind"]
-rust-unwind = ["dep:unwind"]
+rust-unwind = []
