--- a/common/fifo_scheduler/gfifo_scheduler/Cargo.toml
+++ b/common/fifo_scheduler/gfifo_scheduler/Cargo.toml
@@ -14,8 +14,7 @@ interface = { path = "../../../../domain-lib/interface",  features = ["domain"] 
 storage = { path = "../../../../domain-lib/storage", features = ["impl"] }
 fifo_scheduler = { path = "../fifo_scheduler" }
 
-unwind = { path = "../../../../base/unwind", optional = true }
 
 [features]
 default = ["rust-unwind"]
-rust-unwind = ["dep:unwind"]
+rust-unwind = []
