--- a/common/logger/glogger/Cargo.toml
+++ b/common/logger/glogger/Cargo.toml
@@ -15,8 +15,7 @@ storage = { path = "../../../../domain-lib/storage", features = ["impl"] }
 
 logger = { path = "../logger" }
 
-unwind = { path = "../../../../base/unwind", optional = true }
 
 [features]
 default = ["rust-unwind"]
-rust-unwind = ["dep:unwind"]
+rust-unwind = []
