--- a/common/random_scheduler/grandom_scheduler/Cargo.toml
+++ b/common/random_scheduler/grandom_scheduler/Cargo.toml
@@ -15,8 +15,7 @@ storage = { path = "../../../../domain-lib/storage", features = ["impl"] }
 
 random_scheduler = { path = "../random_scheduler" }
 
-unwind = { path = "../../../../base/unwind", optional = true }
 
 [features]
 default = ["rust-unwind"]
-rust-unwind = ["dep:unwind"]
+rust-unwind = []
