--- a/common/syscall/gsyscall/Cargo.toml
+++ b/common/syscall/gsyscall/Cargo.toml
@@ -15,8 +15,7 @@ storage = { path = "../../../../domain-lib/storage", features = ["impl"] }
 
 syscall = { path = "../syscall" }
 
-unwind = { path = "../../../../base/unwind", optional = true }
 
 [features]
 default = ["rust-unwind"]
-rust-unwind = ["dep:unwind"]
+rust-unwind = []
