--- a/common/xlogger/gxlogger/Cargo.toml
+++ b/common/xlogger/gxlogger/Cargo.toml
@@ -13,8 +13,7 @@ rref = { path = "../../../../domain-lib/rref" }
 interface = { path = "../../../../domain-lib/interface",  features = ["domain"]  }
 storage = { path = "../../../../domain-lib/storage", features = ["impl"] }
 xlogger = { path = "../xlogger" }
-unwind = { path = "../../../../base/unwind", optional = true }
 
 [features]
 default = ["rust-unwind"]
-rust-unwind = ["dep:unwind"]
+rust-unwind = []
