--- a/drivers/buf_uart/gbuf_uart/Cargo.toml
+++ b/drivers/buf_uart/gbuf_uart/Cargo.toml
@@ -14,8 +14,7 @@ malloc = { path = "../../../../domain-lib/malloc" }
 buf_uart = { path = "../buf_uart" }
 storage = { path = "../../../../domain-lib/storage", features = ["impl"] }
 
-unwind = { path = "../../../../base/unwind", optional = true }
 
 [features]
 default = ["rust-unwind"]
-rust-unwind = ["dep:unwind"]
+rust-unwind = []
