--- a/drivers/goldfish/ggoldfish/Cargo.toml
+++ b/drivers/goldfish/ggoldfish/Cargo.toml
@@ -15,8 +15,7 @@ storage = { path = "../../../../domain-lib/storage", features = ["impl"] }
 
 goldfish = { path = "../goldfish" }
 
-unwind = { path = "../../../../base/unwind", optional = true }
 
 [features]
 default = ["rust-unwind"]
-rust-unwind = ["dep:unwind"]
+rust-unwind = []
