--- a/drivers/null/gnull/Cargo.toml
+++ b/drivers/null/gnull/Cargo.toml
@@ -13,10 +13,9 @@ rref = { path = "../../../../domain-lib/rref" }
 interface = { path = "../../../../domain-lib/interface",  features = ["domain"]  }
 storage = { path = "../../../../domain-lib/storage", features = ["impl"] }
 null = { path = "../null" }
-unwind = { path = "../../../../base/unwind", optional = true }
 
 
 
 [features]
 default = ["rust-unwind"]
-rust-unwind = ["dep:unwind"]
+rust-unwind = []
