--- a/drivers/shadow_blk/gshadow_blk/Cargo.toml
+++ b/drivers/shadow_blk/gshadow_blk/Cargo.toml
@@ -15,8 +15,7 @@ storage = { path = "../../../../domain-lib/storage", features = ["impl"] }
 
 shadow_blk = { path = "../shadow_blk" }
 
-unwind = { path = "../../../../base/unwind", optional = true }
 
 [features]
 default = ["rust-unwind"]
-rust-unwind = ["dep:unwind"]
+rust-unwind = []
