--- a/drivers/uart16550/guart16550/Cargo.toml
+++ b/drivers/uart16550/guart16550/Cargo.toml
@@ -15,8 +15,7 @@ storage = { path = "../../../../domain-lib/storage", features = ["impl"] }
 
 uart16550 = { path = "../uart16550" }
 
-unwind = { path = "../../../../base/unwind", optional = true }
 
 [features]
 default = ["rust-unwind"]
-rust-unwind = ["dep:unwind"]
+rust-unwind = []
