--- a/drivers/vf2_sd/gvf2_sd/Cargo.toml
+++ b/drivers/vf2_sd/gvf2_sd/Cargo.toml
@@ -14,8 +14,7 @@ interface = { path = "../../../../domain-lib/interface", features = ["domain"] }
 storage = { path = "../../../../domain-lib/storage", features = ["impl"] }
 vf2_sd = { path = "../vf2_sd" }
 
-unwind = { path = "../../../../base/unwind", optional = true }
 
 [features]
 default = ["rust-unwind"]
-rust-unwind = ["dep:unwind"]
+rust-unwind = []
