--- a/drivers/virtio_mmio_block/gvirtio_mmio_block/Cargo.toml
+++ b/drivers/virtio_mmio_block/gvirtio_mmio_block/Cargo.toml
@@ -14,8 +14,7 @@ interface = { path = "../../../../domain-lib/interface",  features = ["domain"] 
 storage = { path = "../../../../domain-lib/storage", features = ["impl"] }
 virtio_mmio_block = { path = "../virtio_mmio_block" }
 
-unwind = { path = "../../../../base/unwind", optional = true }
 
 [features]
 default = ["rust-unwind"]
-rust-unwind = ["dep:unwind"]
+rust-unwind = []
