--- a/drivers/virtio_mmio_input/gvirtio_mmio_input/Cargo.toml
+++ b/drivers/virtio_mmio_input/gvirtio_mmio_input/Cargo.toml
@@ -15,8 +15,7 @@ storage = { path = "../../../../domain-lib/storage", features = ["impl"] }
 
 virtio_mmio_input = { path = "../virtio_mmio_input" }
 
-unwind = { path = "../../../../base/unwind", optional = true }
 
 [features]
 default = ["rust-unwind"]
-rust-unwind = ["dep:unwind"]
+rust-unwind = []
