--- a/drivers/virtio_mmio_net/gvirtio_mmio_net/Cargo.toml
+++ b/drivers/virtio_mmio_net/gvirtio_mmio_net/Cargo.toml
@@ -15,8 +15,7 @@ storage = { path = "../../../../domain-lib/storage", features = ["impl"] }
 
 virtio_mmio_net = { path = "../virtio_mmio_net" }
 
-unwind = { path = "../../../../base/unwind", optional = true }
 
 [features]
 default = ["rust-unwind"]
-rust-unwind = ["dep:unwind"]
+rust-unwind = []
