use default impl for cache_blk

--- a/drivers/virtio_mmio_block/virtio_mmio_block/Cargo.toml
+++ b/drivers/virtio_mmio_block/virtio_mmio_block/Cargo.toml
@@ -15,4 +15,5 @@ virtio-drivers = { git = "https://github.com/os-module/safe-virtio-drivers.git" 
 log = "0"
 
 [features]
+default = []
 crash = []
