add new syscall to support redis
- add magic number for fs

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,10 +2,12 @@
 domain = "run -p domain --"
 
 [target.riscv64]
+# --cfg getrandom_backend="linux_getrandom"
 rustflags = [
     "-Clink-arg=-T../../domain.ld",
     "-Clink-arg=-pie",
     "-A", "unused_imports",
+    "--cfg", "getrandom_backend=\"custom\""
 ]
 linker = "riscv64-linux-gnu-gcc"
 
